@@ -2,18 +2,19 @@ machine: 400Mhz AMD-K6(tm) 3D processor
 
 note that Static_Move is 'mock' test, hopefully achievable
 
-                      creation   movement
-C++/Message_Move    : 2.9K/s     1.9K/s
-C++/Objects_Move    : 860/s      500/s
-C++/Objects2_Move   : 52K/s      32K/s
-C++/Objects3_Move   : 300K/s     300K/s
-C++/Objects3_Move/s : 500K/s     380K/s (#define USE_STRING 0)
-C++/Static_Move     : 7.6M/s     1.7M/s
-C++/SmartPtr_Move   : 1.8M/s     810K/s
-C++/Call_Move       :            1.9M/s
-Python/OldMove      : 1.5K/s     900/s
-Python/Move         : 1.3K/s     840/s
-Python/Call_Move    :            26K/s
+                         creation   movement
+C++/Message_Move       : 2.9K/s     1.9K/s
+C++/Message_Move/union : 3.2K/s     2.3K/s (union optimization by Karsten)
+C++/Objects_Move       : 860/s      500/s
+C++/Objects2_Move      : 52K/s      32K/s
+C++/Objects3_Move      : 300K/s     300K/s
+C++/Objects3_Move/s    : 500K/s     380K/s (#define USE_STRING 0)
+C++/Static_Move        : 7.6M/s     1.7M/s
+C++/SmartPtr_Move      : 1.8M/s     810K/s
+C++/Call_Move          :            1.9M/s
+Python/OldMove         : 1.5K/s     900/s
+Python/Move            : 1.3K/s     840/s
+Python/Call_Move       :            26K/s
 
 
 forge-2000.08.11-17:29:05/scratchpad/Object_modified.h
@@ -144,3 +145,11 @@ Objects3_Move.cpp
         NPC movements: 
                 iterations=1e+06 CPU Time=2.55 iter/s=392157
         5.03user 0.06system 0:05.28elapsed 96%CPU (0avgtext+0avgdata 0maxresident)k
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+2000-12-08:
+Message_Move with Karsten Object optimizations:
+        Plain creating of sight operation: 
+                iterations=100000 CPU Time=30.25 iter/s=3305.79
+        NPC movements: 
+                iterations=100000 CPU Time=42.12 iter/s=2374.17
+        72.41user 0.05system 1:22.48elapsed 87%CPU (0avgtext+0avgdata 0maxresident)k
